# libm4v_h263

./: .gitignore  CMakeLists.txt  README.md
dec/: Android.bp  CMakeLists.txt  SoftMPEG4.cpp
dec/include/: mp4dec_api.h
dec/src/: CMakeLists.txt  conceal.cpp  pvdec_api.cpp
dec/test/: CMakeLists.txt  m4v_h263_dec_test.cpp
enc/: CMakeLists.txt  SoftMPEG4Encoder.cpp
enc/include/: mp4enc_api.h
enc/src/: CMakeLists.txt  dct.cpp  dct_inline.h  fastcodemb.cpp  fastidct.cpp  fastquant.cpp  fastquant_inline.h  motion_comp.cpp  motion_est.cpp  mp4enc_api.cpp  rate_control.cpp  sad.cpp  sad_halfpel.cpp  vlc_encode.cpp
enc/test/: CMakeLists.txt  m4v_h263_enc_test.cpp
